[project]
name = "calcul-optimisation-fiscale-entreprise"
version = "0.1.0"
description = "Calculateur d'optimisation fiscale pour entreprises en Tunisie"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.1.0",
    "pydantic>=2.0.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.workspace]
members = []
